...
    <string name="sl_note_info_message_part2">Not even Proton or SimpleLogin can see it.</string>
    <string name="sl_note_info_message_part3">SimpleLogin note is stored together in the same location with alias address and while it is protected by encryption at rest, it isn\'t E2E encrypted meaning anyone who has access to SimpleLogin database can read it.</string>
    <string name="sl_note_info_content_description">Show SL note information dialog</string>
    <!-- Create note -->
    <string name="note_hint">Note</string>
    <!-- Create Credit Card -->
    <string name="field_cardholder_name_title">Name on card</string>
    <string name="field_cardholder_name_hint">Full name</string>
    <string name="field_card_number_title">Card number</string>
    <string name="field_card_number_hint">1234 1234 1234 1234</string>
    <string name="field_card_cvv_title">Security code</string>
    <string name="field_card_cvv_hint">123</string>
    <string name="field_card_pin_title">PIN</string>
    <string name="field_card_pin_hint">123456</string>
    <string name="field_card_expiration_date_title">Expiration date</string>
    <string name="field_card_expiration_date_hint">MM/YY</string>
    <string name="field_card_expiration_date_error">Enter a valid date in MM/YY format</string>
    <string name="create_credit_card_item_creation_error">Could not create credit card</string>
    <string name="create_credit_card_item_creation_success">Credit card created</string>
    <string name="credit_card_init_error">Problem retrieving credit card details</string>
    <string name="update_credit_card_attachments_init_error">Problem retrieving credit card attachments</string>
...
    <string name="identity_attachments_error">Failed to link or unlink attachments to the identity</string>
    <string name="create_identity_item_creation_error">Could not create identity</string>
    <string name="create_identity_item_creation_success">Identity created</string>
    <string name="update_identity_item_creation_success">Identity updated</string>
    <string name="update_identity_item_creation_error">Could not update identity</string>
    <!--  Common create items  -->
    <string name="title_create">Create</string>
    <string name="changes_saved">Changes saved</string>
    <!--  TOTP  -->
    <string name="totp_create_login_field_title">2FA secret key (TOTP)</string>
    <string name="totp_create_login_field_invalid">Invalid 2FA secret key (TOTP)</string>
    <string name="totp_create_login_field_placeholder">Add 2FA secret key (TOTP)</string>
    <string name="close_scree_icon_content_description">Close screen button</string>
    <string name="totp_paste_code_action">Paste code</string>
    <string name="totp_scan_code_action">Scan code</string>
    <string name="field_cannot_be_empty">This field cannot be empty</string>
    <string name="camera_permission_explanation">Camera permission required for this feature to be available.</string>
    <string name="camera_permission_open_settings">Open settings</string>
    <!--  TOTP limit  -->
    <string name="mfa_limit_reached">2FA limit reached</string>
    <string name="upgrade">Upgrade</string>
    <string name="mfa_icon_content_description">2FA icon</string>
    <string name="select_suffix_upgrade_for_custom_domains">Upgrade for custom domains</string>
    <string name="create_alias_content_limit_banner">You have reached the limit of aliases you can create. Create unlimited number of aliases when you upgrade your subscription.</string>
    <string name="snackbar_update_app_to_update_item" comment="This message will appear to users that try to update an item that needs a newer version of the app to do so">The app needs to be updated to edit this item</string>
    <string name="remove_passkey_dialog_title">Remove this passkey?</string>
    <string name="remove_passkey_dialog_body" comment="Body of the dialog that asks the user if they want to remove the passkey for an item. Placeholder 1 is the username (such as my_user). Placeholder 2 is the domain (such as google.com)">You are about to remove the passkey for user \'%1$s\' for \'%2$s\'. Are you sure?</string>
...
